<resources xmlns:tools="http://schemas.android.com/tools"
    tools:locale="fr">
    <!-- Activité LogIn -->
    <string name="app_name">Au Rythme de la Production</string>
    <string name="connexion">Connexion</string>

    <!-- Fragment du profil animateur -->
    <string name="animateur_ligne_participant">Participants : </string>
    <string name="animateur_ligne_vehicule">Véhicule : </string>
    <string name="animateur_ligne_ligne">Lignes : </string>
    <string name="animateur_ligne_iteration">Itération : </string>
    <string name="animateur_sous_titre">Profil animateur</string>
    <string name="animateur_alerte_titre">Réinitialisation</string>
    <string name="animateur_alerte_message">Voulez-vous vraiment réinitialiser l\'activité ?</string>
    <string name="animateur_alerte_positif">Oui</string>
    <string name="animateur_alerte_negatif">Annuler</string>
    <string name="animateur_bouton_vehicule_produit">Véhicule produit ligne </string>
    <string name="animateur_notification_vehicule_produit">Véhicule enregistré ligne </string>

    <!-- Profil animateur - actions -->
    <string-array name="animateur_actions">
        <item>Plan de la salle</item>
        <item>Améliorations</item>
        <item>Afficher statistiques</item>
        <item>Réinitialisation de l\'activité</item>
    </string-array>

    <!-- Fragment du profil assembleur -->
    <string name="assembleur_tache">Tâche d\'assemblage</string>
    <string name="assembleur_bouton_demande_aide">Demande d\'aide</string>
    <string name="assembleur_image_assemblage">Image de l\'étape d\'assemblage</string>
    <string name="assembleur_titre_espace_piece">Demande de pièces</string>
    <string name="assembleur_titre_poste_non_configure">Poste non configuré</string>

    <!-- Classe AssemblyRepository (pour les étapes d'assemblage) -->
    <string name="assemblyrepository_assembleur1">Installation de la transmission</string>
    <string name="assemblyrepository_assembleur2">Installation du chassis avant</string>
    <string name="assemblyrepository_assembleur3">Pose du volant et du banc</string>
    <string name="assemblyrepository_assembleur4">Installation du chassis inférieur et de la chenille</string>
    <string name="assemblyrepository_assembleur5">Installation latérale du chassis</string>
    <string name="assemblyrepository_assembleur6">Installation du patin gauche</string>
    <string name="assemblyrepository_assembleur7">Installation du patin droit</string>
    <string name="assemblyrepository_assembleur8">Assemblage de la structure de la chenille</string>
    <string name="assemblyrepository_assembleur9">Pose de la chenille</string>
    <string name="assemblyrepository_spyder_assembleur4">Installation du chassis arrière (première partie)</string>
    <string name="assemblyrepository_spyder_assembleur5">Installation du chassis arrière (deuxième partie)</string>

    <!-- Fragment du profil cariste -->
    <string name="cariste_tache">Apportez les pièces aux assembleurs</string>
    <string name="cariste_titre_espace_demande_piece">Demandes de pièces</string>
    <string name="cariste_poste_espace_demande_piece">Poste</string>
    <string name="cariste_piece_espace_demande_piece">Pièce</string>

    <!-- Fragment du profil chef d'équipe -->
    <string name="chef_equipe_tache">Coordonnez l’équipe et répondez aux demandes d\'aide</string>
    <string name="chef_equipe_titre_espace_demande_aide">Demandes d\'aide</string>
    <string name="chef_equipe_ligne_demande_aide">Aide demandée : </string>
    <string name="chef_equipe_ligne_reparation">Réparation complétée !</string>
    <string name="chef_equipe_reparations">Réparations</string>

    <!-- Fragment d'erreur de connexion -->
    <string name="erreur_connexion_message">Connexion au serveur impossible</string>
    <string name="erreur_connexion_bouton">Réessayer</string>

    <!-- Fragment du contrôleur qualité -->
    <string name="controle_qualite_tache">Assurez-vous que le véhicule soit conforme au standard attendu</string>
    <string name="controle_qualite_liste_verification_titre">Liste de vérification</string>
    <string name="controle_qualite_liste_verification_bouton_reinitialiser">Réinitialiser</string>
    <string name="controle_qualite_liste_verification_bouton_general_un">Suspension fonctionnelle</string>
    <string name="controle_qualite_liste_verification_bouton_general_deux">Transmission adéquate</string>
    <string name="controle_qualite_liste_verification_bouton_skidoo">Chenille tourne</string>
    <string name="controle_qualite_liste_verification_bouton_spyder">Roues tournent</string>

    <!-- Fragment du profil expédition -->
    <string name="expedition_tache">Vous devez assembler la boîte de livraison et déposer le véhicule à l\'intérieur</string>
    <string name="expedition_tache_ameliore">La boîte est déjà assemblée, déposer le véhicule à l\'intérieur</string>
    <string name="expedition_profile_name">Expédition</string>

    <!-- Fragment améliorations -->
    <string name="ameliorations_liste_titre">Liste des améliorations</string>
    <string name="ameliorations_bouton_iteration">Passer à la prochaine itération</string>
    <string name="ameliorations_titre">Améliorations</string>
    <string name="ameliorations_notification_iteration">Itération suivante démarrée</string>
    <string name="ameliorations_ligne_a">Ligne A</string>
    <string name="ameliorations_ligne_b">Ligne B</string>

    <!-- Fragment améliorations - boutons -->
    <string name="improvement_bouton_aide">Bouton aide chef d\'équipe</string>
    <string name="improvement_demande_pieces">Demande de pièces</string>
    <string name="improvement_controle_qualite">Amélioration contrôle qualité</string>
    <string name="improvement_expedition">Amélioration expédition</string>
    <string name="improvement_mecanicien">Amélioration mécanicien</string>

    <!-- Fragment du profil mécanicien -->
    <string name="mecanicien_tache">Réparer les véhicules selon l\'étape à laquelle ils se trouvent</string>
    <string name="mecanicien_boutons_amelioration">Assembleur </string>
    <string name="mecanicien_profile_name">Mécanicien %1$s</string> <!-- %1$s est un placeholder pour "A" ou "B" -->
    <string name="reparation_completee">Bouton de réparation complétée </string>

    <!-- Fragment du choix du nombre de participants -->
    <string name="choix_participants_bouton_soumettre">Soumettre</string>
    <string name="choix_participants_sous_titre">Choix du nombre de participants</string>
    <string name="choix_participants_bouton_francais">FR</string>
    <string name="choix_participants_bouton_anglais">EN</string>

    <!-- Fragment du choix du plan de la salle -->
    <string name="plan_salle_texte_participants">Participants : </string>
    <string name="plan_salle_texte_vehicule">Véhicule : </string>
    <string name="plan_salle_texte_ligne">Lignes : </string>
    <string name="plan_salle_bouton_retour">Retour</string>
    <string name="plan_salle_sous_titre">Plan de la salle</string>

    <!-- Notes sur le placement de la salle -->
    <!-- Les répétitions sont volontaires, si on veut éventuellement modifier une configuration de la salle -->
    <string name="plan_salle_notes_titre">Notes</string>
    <string-array name="plan_notes_case10">
        <item>• Le chef d\'équipe occupe également le rôle de mécanicien</item>
        <item>• Le contrôleur qualité occupe également le rôle de l\'expédition</item>
    </string-array>
    <string-array name="plan_notes_case11">
        <item>• Le contrôleur qualité occupe également le rôle de l\'expédition</item>
    </string-array>
    <string-array name="plan_notes_case12">
        <item>• Tous les postes sont occupés</item>
    </string-array>
    <string-array name="plan_notes_case13">
        <item>• Tous les postes sont occupés</item>
    </string-array>
    <string-array name="plan_notes_case14">
        <item>• Tous les postes sont occupés</item>
    </string-array>
    <string-array name="plan_notes_case15">
        <item>• Tous les postes sont occupés</item>
    </string-array>
    <string-array name="plan_notes_case16">
        <item>• Le chef d\'équipe occupe également le rôle de mécanicien pour les deux lignes</item>
        <item>• Le contrôleur qualité occupe également le rôle de l\'expédition pour les deux lignes</item>
    </string-array>
    <string-array name="plan_notes_case17">
        <item>• Le chef d\'équipe occupe également le rôle de mécanicien pour les deux lignes</item>
        <item>• Le contrôleur qualité occupe également le rôle de l\'expédition pour la ligne B</item>
    </string-array>
    <string-array name="plan_notes_case18">
        <item>• Le chef d\'équipe occupe également le rôle de mécanicien pour les deux lignes</item>
    </string-array>
    <string-array name="plan_notes_case19">
        <item>• Le chef d\'équipe occupe également le rôle de mécanicien pour la ligne B</item>
    </string-array>
    <string-array name="plan_notes_case20">
        <item>• Le chef d\'équipe occupe également le rôle de mécanicien pour les deux lignes</item>
        <item>• Le contrôleur qualité occupe également le rôle de l\'expédition pour les deux lignes</item>
    </string-array>
    <string-array name="plan_notes_case21">
        <item>• Le chef d\'équipe occupe également le rôle de mécanicien pour les deux lignes</item>
        <item>• Le contrôleur qualité occupe également le rôle de l\'expédition pour la ligne B</item>
    </string-array>
    <string-array name="plan_notes_case22">
        <item>• Le chef d\'équipe occupe également le rôle de mécanicien pour les deux lignes</item>
    </string-array>
    <string-array name="plan_notes_case23">
        <item>• Le chef d\'équipe occupe également le rôle de mécanicien pour la ligne B</item>
    </string-array>
    <string-array name="plan_notes_case24">
        <item>• Tous les postes sont occupés</item>
    </string-array>
    <string-array name="plan_notes_case25">
        <item>• Cariste supplémentaire pour la ligne A</item>
    </string-array>
    <string-array name="plan_notes_case26">
        <item>• Tous les postes sont occupés</item>
    </string-array>
    <string-array name="plan_notes_case27">
        <item>• Un sous-assembleur supplémentaire pour la ligne A</item>
    </string-array>
    <string-array name="plan_notes_case28">
        <item>• Tous les postes sont occupés</item>
    </string-array>
    <string-array name="plan_notes_case29">
        <item>• Un sous-assembleur supplémentaire pour la ligne A</item>
    </string-array>
    <string-array name="plan_notes_case30">
        <item>• Tous les postes sont occupés</item>
    </string-array>

    <!-- Fragment de sélection du profil -->
    <string name="choix_profil_sous_titre">Choix du profil</string>
    <string name="profil_assembleur">Assembleur %1$s</string>
    <string name="profil_mecanicien">Mécanicien %1$s</string>
    <string name="profil_cariste">Cariste %1$s</string>
    <string name="profil_chef_equipe">Chef d\'équipe %1$s</string>
    <string name="profil_controle_qualite">Contrôle qualité %1$s</string>
    <string name="profil_expedition">Expédition %1$s</string>
    <string name="profil_animateur">Animateur</string>

    <!-- Fragment d'affichage des statistiques -->
    <string name="statistiques_iteration">Itération </string>
    <string name="statistiques_ligne">Ligne </string>
    <string name="statistiques_vehicules">Véhicules : </string>
    <string name="statistiques_aides">Aides : </string>
    <string name="statistiques_pieces">Pièces : </string>
    <string name="statistiques_reparations">Réparations : </string>

    <!-- Affichage des statistiques avancées -->
    <string name="statistiques_aucune_demande"> Aucune demande d\'aide.</string>

</resources>