<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:padding="16dp"
android:layout_width="match_parent"
android:layout_height="match_parent">

<!-- description rôle -->

    <TextView
        android:id="@+id/txtRole"
        android:text="@string/chef_equipe_tache"
        android:textSize="26sp"
        android:fontFamily="@font/bebas_neue"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- Encadré demandes -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Demandes d'aide -->

            <LinearLayout
                android:id="@+id/helpBox"
                android:orientation="vertical"
                android:background="@drawable/parts_box_background"
                android:padding="12dp"
                android:visibility="gone"
                android:layout_weight="1"
                android:layout_marginTop="16dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/chef_equipe_titre_espace_demande_aide"
                    android:textSize="26sp"
                    android:fontFamily="@font/bebas_neue"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:id="@+id/helpContainer"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <!-- Réparations -->

            <LinearLayout
                android:id="@+id/repairBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/parts_box_background"
                android:layout_weight="1"
                android:layout_marginTop="16dp"
                android:padding="12dp"
                android:orientation="vertical">

                <TextView
                    android:text="@string/chef_equipe_reparations"
                    android:textSize="26sp"
                    android:fontFamily="@font/bebas_neue"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:id="@+id/repairContainer"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

</LinearLayout>